<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
      
  <modelVersion>4.0.0</modelVersion>
      
  <groupId>com.psf</groupId>
      
  <artifactId>sm-parent</artifactId>
      
  <version>1.0-SNAPSHOT</version>
      
  <packaging>pom</packaging>
      
  <name>sm-parent</name>
      
  <properties>
            
    <netbeans.version>RELEASE260</netbeans.version>
            
    <brandingToken>sm</brandingToken>
            
    <!-- NetBeans 22+ requires JDK 17+ -->
            
    <maven.compiler.release>17</maven.compiler.release>
        
  </properties>
      
  <modules>
            
    <module>branding</module>
            
    <module>application</module>
            
    <module>sm-core</module>
          
    <module>cursed_signals</module>
      
  </modules>
      
  <build>
            
    <pluginManagement>
                  
      <plugins>
                        
        <plugin>
                              
          <groupId>org.apache.netbeans.utilities</groupId>
                              
          <artifactId>nbm-maven-plugin</artifactId>
                              
          <version>14.3</version>
                              
          <extensions>true</extensions>
                              
          <configuration>
                                    
            <brandingToken>${brandingToken}</brandingToken>
                                    
            <cluster>${brandingToken}</cluster>
                                    
            <platform-run-params>
                            -J--add-opens=java.base/java.net=ALL-UNNAMED
                        </platform-run-params>
                                
          </configuration>
                              
          <executions>
                                    
            <execution>
                                          
              <id>run-app</id>
                                          
              <goals>
                                                
                <goal>run-platform</goal>
                                            
              </goals>
                                          
              <configuration>
                                                
                <additionalArguments>-J--add-opens=java.base/java.net=ALL-UNNAMED -J-Xmx4G --locale en_GB --fontsize 13</additionalArguments>
                                            
              </configuration>
                                      
            </execution>
                                
          </executions>
                          
        </plugin>
                        
        <plugin>
                              
          <groupId>org.apache.maven.plugins</groupId>
                              
          <artifactId>maven-compiler-plugin</artifactId>
                              
          <version>3.13.0</version>
                          
        </plugin>
                        
        <plugin>
                              
          <groupId>org.apache.maven.plugins</groupId>
                              
          <artifactId>maven-jar-plugin</artifactId>
                              
          <version>3.4.2</version>
                          
        </plugin>
                    
      </plugins>
              
    </pluginManagement>
        
  </build>
  
</project>
